--- a/covert/requirements.txt
+++ b/covert/requirements.txt
@@ -1,3 +1,8 @@
-pymongo   >= 3.0.0
-Chameleon >= 2.18
-WebOb     >= 1.5.0
+pymongo    >= 3.0.0
+Chameleon  >= 2.18
+WebOb      >= 1.5.0
+pyyaml     >=
+voluptuous >=
+waitress   >=
+tonnikala  >= ... (optional)
+mako       >= ... (optional)
