--- a/covert/requirements.txt
+++ b/covert/requirements.txt
@@ -2,8 +2,6 @@ pymongo    >= 3.0.0
 bson       >= 0.4.2
 Chameleon  >= 2.18
 WebOb      >= 1.5.0
-pyyaml     >=
-voluptuous >=
-waitress   >=
-tonnikala  >= ... (optional), install from latest wheel file!
-mako       >= ... (optional)
+pyyaml     >= 3.12
+voluptuous >= 0.10.5
+waitress   >= 1.0.2
